--- a/book-app/frontend/index.html
+++ b/book-app/frontend/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Library</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Bienvenido a la Biblioteca</h1>
-    <div id="books-container"></div> <!-- Aquí se mostrarán los libros -->
+    <div class="buscar">
+        <h2>Busca un libro por autor</h2>
+        <input type="text" id="search-query" placeholder="Buscar libros...">
+        <button id="search-btn">Buscar</button>
+    </div>
 
+    <!-- Contenedor para mostrar los resultados -->
+    <div id="books-container"></div>
+
+    
     <script src="app.js"></script>
 </body>
+
 </html>
