--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,8 @@
     <div id="books-container"></div>
     <div id="no-results" class="hidden">
         <h3>No se encontraron resultados</h3>
-        <p>Intenta con otra búsqueda o explora nuestra colección destacada.</p>
+        <p>Intenta con otra búsqueda o explora nuestra 
+            colección destacada.</p>
     </div>
     <div id="featured-books" class="hidden">
         <h2>Libros Destacados(Diferentes idiomas)</h2>
