feat: :tada:correcion

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biblioteca Virtual</title>
     <link rel="shortcut icon" href="../resources/author.svg" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="animations.css">
+    <link rel="stylesheet" href="public/style.css">
+    <link rel="stylesheet" href="public/animations.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="tittle">
         <h1>Biblioteca Virtual</h1>
-        <img src="../resources/author.svg" alt="">
+        <img src="./resources/author.svg" alt="">
     </div>
 
     <div class="buscar">
@@ -40,7 +40,7 @@
     </div>
     <div id="iframe-container" style="display: none;"></div>
 
-    <script src="app.js" type="module"></script>
+    <script src="public/app.js" type="module"></script>
 </body>
 
 </html>
