--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="public/style.css">
     <link rel="stylesheet" href="public/animations.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3768515399728258"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
